<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.developer.codingchallenge.ui.fragment.UserDataFragment">


    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/txt_date_userData"
            style="@style/TextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_user" />

        <TextView
            android:id="@+id/txt_time_userData"
            style="@style/TextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_user" />

        <TextView
            android:id="@+id/txt_name_userData"
            style="@style/TextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_user" />

        <TextView
            android:id="@+id/txt_food_userData"
            style="@style/TextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_user" />

        <TextView
            android:id="@+id/txt_number_userData"
            style="@style/TextViewBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_user" />

    </LinearLayout>


</FrameLayout>
