<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.codingchallenge.ui.fragment.UserOptionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/select_date" />

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/date" />
            </LinearLayout>

            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/select_time" />

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/time" />
            </LinearLayout>

            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">


                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName" />
            </LinearLayout>


            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/select_food" />

                <RadioGroup
                    android:id="@+id/rdg_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdb_pizza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza" />

                    <RadioButton
                        android:id="@+id/rdb_chicken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chicken" />

                    <RadioButton
                        android:id="@+id/rdb_vegi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vegi" />

                    <RadioButton
                        android:id="@+id/rdb_hamburger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hamburger" />

                    <RadioButton
                        android:id="@+id/rdb_spaghetti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spaghetti" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/select_number" />

                <Button
                    android:id="@+id/btn_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/number" />
            </LinearLayout>

            <LinearLayout
                style="@style/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</FrameLayout>
